# learn-fastapi

./: .gitignore  README.md  pyproject.toml
src/fastapi_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
