[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI project with Jinja2 and SQL databases"
readme = "README.md"
authors = [{ name="Misbahur Rahman", email="rahman.misbah2604@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "sqlalchemy>=2.0.27",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]
